<resources>
    <string name="app_name">Bugünkü Yemeğim</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_anasayfa">Ana Sayfa</string>
    <string name="menu_anayemek">Ana Yemek</string>
    <string name="menu_pilav">Pilav</string>
    <string name="menu_corba">Çorba</string>
    <string name="menu_salata">Salata</string>
    <string name="menu_tatli">Tatlı</string>
    <string name="menu_favori">Favorilerim</string>

    <string name="speech_prompt">Bir şeyler söyleyin</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

    <string name="share_subject">Bugünkü Yemeğim ?</string>
    <string name="popup_text" >Lütfen İnternet Bağlantınızı Kontrol Ediniz.</string>
</resources>
