<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_anasayfa"
            android:icon="@drawable/icon_anasayfa"
            android:title="@string/menu_anasayfa" />
        <item
            android:id="@+id/nav_anayemek"
            android:icon="@drawable/icon_anayemek"
            android:title="@string/menu_anayemek" />
        <item
            android:id="@+id/nav_pilav"
            android:icon="@drawable/icon_pilav"
            android:title="@string/menu_pilav" />
        <item
            android:id="@+id/nav_corba"
            android:icon="@drawable/icon_corba"
            android:title="@string/menu_corba" />
        <item
            android:id="@+id/nav_salata"
            android:icon="@drawable/icon_salata"
            android:title="@string/menu_salata" />
        <item
            android:id="@+id/nav_tatli"
            android:icon="@drawable/icon_tatli"
            android:title="@string/menu_tatli" />
        <item
            android:id="@+id/nav_favori"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favori" />
    </group>


</menu>
