<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_anasayfa">

    <fragment
        android:id="@+id/nav_anasayfa"
        android:name="com.recepyesilkaya.bugunkuyemegim.ui.home.HomeFragment"
        android:label="@string/menu_anasayfa"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_anayemek"
        android:name="com.recepyesilkaya.bugunkuyemegim.ui.gallery.GalleryFragment"
        android:label="@string/menu_anayemek"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_pilav"
        android:name="com.recepyesilkaya.bugunkuyemegim.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_pilav"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_corba"
        android:name="com.recepyesilkaya.bugunkuyemegim.ui.tools.ToolsFragment"
        android:label="@string/menu_corba"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_salata"
        android:name="com.recepyesilkaya.bugunkuyemegim.ui.share.ShareFragment"
        android:label="@string/menu_salata"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_tatli"
        android:name="com.recepyesilkaya.bugunkuyemegim.ui.send.SendFragment"
        android:label="@string/menu_tatli"
        tools:layout="@layout/fragment_send" />
</navigation>